--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.4",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
