--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scrollspy-navigation": "^1.0.3",
     "reactstrap": "^9.1.4",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
