--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scrollspy-navigation": "^1.0.3",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.1.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
-    "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
